Some batches had so many levels in it that it was retturning URI too long issue. Switched to post for mentor section because of that.

--- a/app/styles/mentor.css
+++ b/app/styles/mentor.css
@@ -53,6 +53,9 @@
 .cancel-option {
 	width:200px;
 }
+.cancel-button {
+	z-index: 101;
+}
 
 /*
 #all-teachers {
